// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useHeaderSetup should handle a string as headerConfig 1`] = `
<OldHeader
  title="test"
/>
`;

exports[`useHeaderSetup should update the header with the headerConfig 1`] = `
<OldHeader
  hideGoBackButton={true}
  theme="default"
  title="test"
/>
`;
